--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         // Função para buscar dados do dashboard
         async function fetchDashboardData(token) {
-            const SUPABASE_FUNCTION_URL = "https://https://jdfdjpwabrttwadxvrrb.supabase.co/functions/v1/get-company-report"; // Substitua <YOUR_PROJECT_REF> pelo ID do seu projeto Supabase
+            const SUPABASE_FUNCTION_URL = "https://jdfdjpwabrttwadxvrrb.supabase.co/functions/v1/get-company-report"; // Substitua <YOUR_PROJECT_REF> pelo ID do seu projeto Supabase
             
             try {
                 const response = await fetch(SUPABASE_FUNCTION_URL, {
