--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
             const SUPABASE_FUNCTION_URL = "https://jdfdjpwabrttwadxvrrb.supabase.co/functions/v1/get-company-report"; // Substitua <YOUR_PROJECT_REF> pelo ID do seu projeto Supabase
             
             try {
+
                 const response = await fetch(SUPABASE_FUNCTION_URL, {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                        "Authorization": `Bearer ${token}`
-                    },
-                    body: JSON.stringify({ token: token }) // Enviando o token no corpo da requisição
-                });
+  method: "GET",
+  headers: {
+    "Authorization": `Bearer ${token}`
+  }
+});
+
 
                 if (!response.ok) {
                     const errorData = await response.json();
